# CourseWork_ChallengeProject_DataStructure_2

./: .gitignore  BUILD.md  CMakeLists.txt  CODE_REVIEW.md  DIRECTORY_STRUCTURE.md  PERFORMANCE_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  election_gui.pro
include/: election_core.h  gui_mainwindow.h
src/: election_core.cpp  gui_main.cpp  gui_mainwindow.cpp  main.cpp
